<resources>
    <string name="app_name">MealBuddy</string>
    <string name="facebook_app_id">1737239446490859</string>
    <string name="google_app_id">1040154061256</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- **************** Settings Tab **************** -->

    <!-- Headings for UI-->
    <string name="ui_account_pref_title">Account Preferences</string>
    <string name="ui_misc_title">Misc.</string>

    <!-- Preference Text for UI-->
    <string name="ui_pref_profile">User Profile</string>
    <string name="ui_pref_profile_comment">Name, Email, Class, etc</string>

    <string name="ui_pref_contact">Contact Sharing</string>
    <string name="ui_pref_contact_comment">Allow your match to view contact information</string>

    <string name="ui_pref_location">Location</string>
    <string name="ui_pref_location_comment">Allow your friends to track you</string>


    <string name="ui_pref_webpage">Webpage</string>
    <string name="ui_pref_webpage_comment">http://mealbuddy.wix.com/main</string>


    <!-- Toast for UI -->
    <string name="ui_toast_save">Saved</string>
    <string name="ui_toast_error">Error</string>
    <string name="ui_toast_cancel">Entry discarded</string>
    <string name="action_settings">Settings</string>

    <string name="display_notification">You have a new match!</string>

    <!-- **************** User Profile **************** -->

    <!-- file names for images -->
    <string name="profile_pict_filename">profile_pict.png</string>
    <string name="temp_filename">temp.png</string>

    <!-- constants for photo picker tag-->
    <string name="photo_picker_tag">photo_picker_tag</string>

    <!-- Text for UI-->
    <string name="ui_profile_photo_title">Profile Photo:</string>
    <string name="ui_name_title">Name</string>
    <string name="ui_email_title">Blitz</string>
    <string name="ui_phone_title">Phone</string>
    <string name="ui_class_title">Class year</string>
    <string name="ui_major_title">Major</string>
    <string name="ui_time_title">Major</string>

    <!-- Buttons for UI -->
    <string name="ui_change_button">CHANGE</string>
    <string name="ui_save_button">SAVE</string>
    <string name="ui_cancel_button">CANCEL</string>
    <string name="ui_ok_button">OK</string>

    <!-- EditView for UI -->
    <string name="ui_edit_name">Your Name</string>
    <string name="ui_edit_email">Your Blitz</string>
    <string name="ui_edit_phone">Your Phone Number</string>
    <string name="ui_edit_class">eg. 2017</string>
    <string name="ui_edit_major">Your Major</string>

    <string-array name="array_class">
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
        <item>Thayer</item>
        <item>Geisel</item>
        <item>Tuck</item>
        <item>Grad</item>
        <item>Faculty</item>
        <item>Visitor</item>
        <item>Others</item>
    </string-array>

    <!-- Spinners for request preferences -->

    <string-array name="request_class_year_spinner_list">
        <item>No preference</item>
        <item>2020</item>
        <item>2019</item>
        <item>2018</item>
        <item>2017</item>
        <item>2016</item>
        <item>Grad student</item>
        <item>Faculty or Staff</item>
    </string-array>

    <string-array name="profile_class_year_spinner_list">
        <item>Unspecified</item>
        <item>2020</item>
        <item>2019</item>
        <item>2018</item>
        <item>2017</item>
        <item>2016</item>
        <item>Grad student</item>
        <item>Faculty or Staff</item>
    </string-array>

    <string-array name="request_field_of_study_spinner_list">
        <item>No preference</item>
        <item>Arts</item>
        <item>Humanities</item>
        <item>Interdisciplinary</item>
        <item>Sciences</item>
        <item>Social Sciences</item>
    </string-array>

    <string-array name="profile_field_of_study_spinner_list">
        <item>Unspecified</item>
        <item>Arts</item>
        <item>Humanities</item>
        <item>Interdisciplinary</item>
        <item>Sciences</item>
        <item>Social Sciences</item>
    </string-array>

    <!-- Constants for photo picker -->
    <string name="ui_photo_picker">"Select profile image"</string>
    <string-array name="ui_photo_picker_list">
        <item>Take picture from camera</item>
        <item>Take picture from gallery</item>
    </string-array>

</resources>
