<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_alignParentTop="true">

                <!-- profile photo section -->
                <com.example.mealbuddy.mealbuddy.CustomTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:paddingTop="10dp"
                    android:textSize="18dp"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/ui_profile_photo_title" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false" >

                    <ImageView
                        android:id="@+id/profile_image"
                        android:layout_width="0dp"
                        android:layout_height="100dp"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:focusable="true"
                        android:focusableInTouchMode="true" >
                        <requestFocus />
                    </ImageView>

                    <Button
                        android:id="@+id/button_change"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="5dp"
                        android:textSize="20dp"
                        android:background="@color/color3a"
                        android:textColor="@color/color1e"
                        android:onClick="selectChange"
                        android:text="@string/ui_change_button" >
                    </Button>
                </LinearLayout>

                <!-- name section -->
                <com.example.mealbuddy.mealbuddy.CustomTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:paddingTop="10dp"
                    android:textSize="18dp"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/ui_name_title" />

                <EditText
                    android:inputType="textPersonName"
                    android:id="@+id/edit_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp"
                    android:textSize="30dp"
                    android:background="@android:color/transparent"
                    android:textColor="@color/color3c"
                    android:hint="@string/ui_edit_name" />

                <!-- class section -->
                <com.example.mealbuddy.mealbuddy.CustomTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:paddingTop="10dp"
                    android:textSize="18dp"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/ui_class_title" />

                <Spinner
                    android:id="@+id/edit_class"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:drawSelectorOnTop="true"
                    android:background="@color/color3a"
                    android:entries="@array/profile_class_year_spinner_list"/>

                <!-- major section -->
                <com.example.mealbuddy.mealbuddy.CustomTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:paddingTop="10dp"
                    android:textSize="18dp"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/ui_major_title" />

                <Spinner
                    android:id="@+id/edit_major"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:drawSelectorOnTop="true"
                    android:background="@color/color3a"
                    android:entries="@array/profile_field_of_study_spinner_list"/>

                <!-- email section -->
                <com.example.mealbuddy.mealbuddy.CustomTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:paddingTop="10dp"
                    android:textSize="18dp"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/ui_email_title" />

                <EditText
                    android:inputType="textEmailAddress"
                    android:id="@+id/edit_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="25dp"
                    android:paddingLeft="20dp"
                    android:background="@android:color/transparent"
                    android:textColor="@color/color3c"
                    android:hint="@string/ui_edit_email" />

                <!-- phone section -->
                <com.example.mealbuddy.mealbuddy.CustomTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:paddingTop="10dp"
                    android:textSize="18dp"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/ui_phone_title" />

                <EditText
                    android:inputType="phone"
                    android:id="@+id/edit_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp"
                    android:textSize="25dp"
                    android:background="@android:color/transparent"
                    android:textColor="@color/color3c"
                    android:hint="@string/ui_edit_phone" />

                <!-- contact sharing section -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:paddingTop="20dp"
                    android:layout_alignParentBottom="true">

                    <CheckBox
                        android:id="@+id/contactsharingcheckbox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <com.example.mealbuddy.mealbuddy.CustomTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:paddingTop="10dp"
                        android:textSize="18dp"
                        android:textColor="@color/colorPrimary"
                        android:text="Allow phone sharing" />

                </LinearLayout>

            </LinearLayout>

            <!-- save or cancel section -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:paddingTop="20dp"
                android:layout_alignParentBottom="true">

                <Button
                    android:id="@+id/button_save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:layout_weight="1"
                    android:textSize="25dp"
                    android:background="@color/color2a"
                    android:textColor="@color/color1e"
                    android:onClick="selectSave"
                    android:text="@string/ui_save_button" >
                </Button>

                <Button
                    android:id="@+id/button_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="40dp"
                    android:layout_weight="1"
                    android:textSize="25dp"
                    android:background="@color/color4a"
                    android:textColor="@color/color1e"
                    android:onClick="selectCancel"
                    android:text="@string/ui_cancel_button" >
                </Button>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>